data/src/main/java/com/example/data/calladapter/error/HttpCodes.kt
package com.example.data.calladapter.error

object HttpCodes {
    const val SERVER_ERROR = 500
}